[package]
name = "bastion-test"
version = "0.1.0"
authors = ["Sagi Sarussi <sagis@sagis.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bastion = "0.4"
bastion-executor = "0.4"
lightproc = "0.3.5"
anyhow = "1.0.31"
async-std = "1.6.2"
sqlx = "0.4.0-beta.1"